final/assets/css/style.css
/*  Theme  */
:root {
  --action-color: #d272ff;
  --secondary-color: #824498;
  --bg-color: #fff;
  --text-color: #232323;
}

body {
  margin: 0;
  padding: 0;
  background: var(--bg-color);
  color: var(--text-color);
  font-family: "Josefin Sans", sans-serif;
}

header {
  background-color: var(--action-color);
}

.main-nav {
  height: 125px;
  justify-content: center;
  align-content: center;
}

.main-nav h2 {
  color: #fff;
  font-size: 1.4rem;
  margin: 0 30px;
}

.CTA {
  background-color: var(--bg-color);
  color: var(--action-color) !important;
  border-radius: 1rem;
  padding: 1rem;
  transition: all 0.4s;
}

.CTA:hover {
  color: var(--bg-color) !important;
}

.container {
  height: 75vh;
  background-image: url("../img/holding-hands.jpg");
  background-position: 40% 60%;
  background-size: cover;
}

.main-container {
  width: calc(100% - 50px);
  margin: 0 auto;
}

.hero {
  width: calc(100% - 50px);
  margin: 0 auto;
  height: 75vh;
  position: absolute;
}

.hero h1 {
  font-family: "Kite One", sans-serif;
  font-size: 3.2rem;
  font-weight: 400;
  color: var(--bg-color);
  margin: 0;
  padding: 1rem;
}

.highlight {
  color: var(--secondary-color);
}

.cta-buttons {
  position: absolute;
  bottom: 20vh;
  right: 2rem;
}

.cta-buttons a {
  text-decoration: none;
  padding: 1rem;
  font-size: 1.2rem;
  color: var(--bg-color);
  border-radius: 1rem;
  transition: 0.5s;
}

.cta-buttons a:hover {
  box-shadow: inset var(--bg-color) 300px 0 0 0;
  color: var(--secondary-color);
}

.main-donate {
  background-color: var(--action-color);
}

.main-volunteer {
  background-color: #82449885;
  margin-right: 1rem;
}

p {
  font-size: 18px;
  line-height: 28px;
}

* {
  scroll-behavior: smooth;
}

.section-heading {
  font-size: 2.4rem;
  font-family: "Kite One", sans-serif;
  color: var(--secondary-color);
  font-weight: 300;
}

#ourmission {
  display: flex;
  flex-direction: column;
}

.mission-card {
  display: grid;
  grid-template-columns: 1fr 5fr;
  align-items: center;
  border: 5px solid var(--secondary-color);
  border-radius: 1rem;
  margin-bottom: 1rem;
}

.fa-solid {
  font-size: 2rem;
  justify-self: center;
  color: var(--secondary-color);
}

.mission-card p {
  padding: 0.5rem;
}

.event-title {
  font-size: 1.2rem;
}

.carousel-cell {
  border: 5px solid var(--secondary-color);
  border-radius: 1rem;
  padding: 1rem;
  margin-right: 1rem;
}

.event-img {
  width: 100%;
  height: auto;
  border-radius: 0.75rem;
}

.flickity-button {
  display: none;
}

#volunteer {
  margin-top: 4rem;
}

.volunteer-form {
  display: grid;
  gap: 1rem;
  margin-bottom: 3rem;
}

.volunteer-form label {
  width: 96%;
}

.volunteer-form label input {
  width: 100%;
  padding: 0.5rem;
  border-radius: 0.5rem;
}

.volunteer-form label select {
  padding: 0.5rem;
  border-radius: 0.5rem;
}

.volunteer-form label textarea {
  width: 100%;
  padding: 0.5rem;
  border-radius: 0.5rem;
}

.volunteer-form button {
  padding: 0.75rem;
  width: 100%;
  background-color: var(--action-color);
  color: white;
  border-radius: 0.5rem;
  border: none;
  cursor: pointer;
  font-family: "Josefin Sans", sans-serif;
  font-size: 1.4rem;
  transition: 0.5s;
}

.volunteer-form button:hover {
  box-shadow: inset var(--secondary-color) 800px 0 0 0;
}

footer {
  padding: 1.4rem 1.4rem;
  background-color: var(--secondary-color);
  color: var(--bg-color);
  display: grid;
  grid-template-columns: 1fr 1fr;
}

footer a {
  color: var(--bg-color);
}

footer h3 {
  grid-column: 1 / 2;
}

.footer-nav {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  grid-column: 2 / 3;
  text-align: right;
}

.footer-copy {
  grid-column: 1 / 3;
  font-size: 1rem;
  justify-self: center;
}

/*
 * Made by Erik Terwan
 * 24th of November 2015
 * MIT License
 *
 *
 * If you are thinking of using this in
 * production code, beware of the browser
 * prefixes.
 */

/* Menu code starts here */

#menuToggle {
  display: block;
  /* You can also use relative/absolute here if you want to stay on the top */
  position: fixed;
  top: 40px;
  right: 50px;
  z-index: 1;
  -webkit-user-select: none;
  user-select: none;
  background-color: var(--action-color);
  padding: 0.5rem;
  padding-top: 0.75rem;
  border-radius: 0.75rem;
}

#menuToggle a {
  text-decoration: none;
  color: var(--bg-color);
  font-size: 1.2rem;
  transition: color 0.3s ease;
  padding: 1rem;
  transition: 0.6s;
  border-radius: 1rem;
}

#menuToggle a:hover {
  box-shadow: inset var(--secondary-color) 200px 0 0 0;
}

#menuToggle input {
  display: block;
  width: 40px;
  height: 32px;
  position: absolute;
  top: -7px;
  right: -5px;

  cursor: pointer;

  opacity: 0; /* hide this */
  z-index: 2; /* and place it over the hamburger */

  -webkit-touch-callout: none;
}

/*
  * Just a quick hamburger
  */
#menuToggle span {
  display: block;
  width: 33px;
  height: 4px;
  margin-bottom: 5px;
  position: relative;

  background: var(--bg-color);
  border-radius: 3px;

  z-index: 1;

  transform-origin: 4px 0px;

  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
    background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
}

#menuToggle span:first-child {
  transform-origin: 0% 0%;
}

#menuToggle span:nth-last-child(2) {
  transform-origin: 0% 100%;
}

/* 
  * Transform all the slices of hamburger
  * into a crossmark.
  */
#menuToggle input:checked ~ span {
  opacity: 1;
  transform: rotate(45deg) translate(-2px, -1px);
  background: var(--text-color);
}

/*
  * But let's hide the middle one.
  */
#menuToggle input:checked ~ span:nth-last-child(3) {
  opacity: 0;
  transform: rotate(0deg) scale(0.2, 0.2);
}

/*
  * Ohyeah and the last one should go the other direction
  */
#menuToggle input:checked ~ span:nth-last-child(2) {
  transform: rotate(-45deg) translate(0, -1px);
}

/*
  * Make this absolute positioned
  * at the top left of the screen
  */
#menu {
  position: absolute;
  max-width: 400px;
  width: 100vw;
  max-height: 100vh;
  margin: -100px 0 0 -200px;
  padding: 50px;
  padding-top: 125px;
  box-sizing: border-box;
  overflow-y: auto;
  background: var(--action-color);
  list-style-type: none;
  -webkit-font-smoothing: antialiased;
  /* to stop flickering of text in safari */

  transform-origin: 0% 0%;
  transform: translate(100%, 0);

  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
}

#menu li {
  padding: 10px 0;
  font-size: 1.6rem;
  margin-bottom: 1rem;
}

#menu li label {
  cursor: pointer;
}

/*
  * And let's slide it in from the left
  */
#menuToggle input:checked ~ ul {
  transform: none;
}

.hide-on-desktop {
  display: initial;
}

.hide-on-mobile {
  display: none;
}

@media screen and (min-width: 1200px) {
  .hide-on-mobile {
    display: initial;
  }
  .hide-on-desktop {
    display: none;
  }
  #menuToggle {
    position: static;
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 100%;
    background-color: var(--action-color);
  }

  #menuToggle input,
  #menuToggle span {
    display: none; /* Hide hamburger elements */
  }

  #menu {
    all: unset;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    width: 100%;
    background-color: var(--action-color);
    list-style: none;
    padding: 20px 0;
  }

  #menu li {
    padding: 0;
    font-size: 18px;
  }

  #menu li a,
  #menu li label {
    color: var(--bg-color);
    text-decoration: none;
    font-weight: bold;
    cursor: pointer;
  }

  nav {
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  nav h2 {
    margin: 0;
    padding: 20px 0;
    color: var(--bg-color);
    font-size: 2rem;
  }
}

